# kcd_dice_game

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  pytest.ini  requirements.txt
config/: game_config.json
instructions/: kcd-dice-game-instructions-1.md
src/: cli.py  main.py  t.py
src/config/: test_save.json
src/examples/: blink.py
src/game_logic/: __init__.py  dice.py  exceptions.py  game.py  player.py  scoring.py
src/kcd_dice_game/: __init__.py  cli.py  main.py  t.py
src/kcd_dice_game/examples/: blink.py  dice_detect_1.py  dice_detect_2.py  dice_detect_3.py
src/kcd_dice_game/game_logic/: __init__.py  dice.py  exceptions.py  game.py  player.py  scoring.py
src/kcd_dice_game/utils/: config.py  logger.py
src/utils/: config.py  logger.py
tests/: conftest.py  test_config.py
tests/game_logic/: test_dice.py  test_game.py  test_player.py  test_scoring.py
