[tool.poetry]
name = "kcd-dice-game"
version = "0.1.0"
description = "KCD dice game assistant"
authors = ["Nicklasos"]
license = "MIT"
readme = "README.md"
packages = [{include = "kcd_dice_game", from = "src"}]

[tool.poetry.dependencies]
python = "^3.13"
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
loguru = "^0.7.3"
pydantic = "^2.11.4"
numpy = "^2.2.5"
opencv-python = "^4.11.0.86"

[tool.poetry.group.dev.dependencies]
mypy = "^1.15.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
cli = "kcd_dice_game.cli:main"